Fixed: In case of big screen resolution the Subject field is too long (bug#12773).

--- a/var/httpd/htdocs/skins/Customer/default/css/Core.Form.css
+++ b/var/httpd/htdocs/skins/Customer/default/css/Core.Form.css
@@ -241,6 +241,7 @@ fieldset select {
 
 .TicketCompose fieldset #Subject {
     width: 50%;
+    max-width: 614px;
 }
 
 fieldset.Columns .Column {
